Qsampler - A LinuxSampler Qt GUI Interface
------------------------------------------

ChangeLog

SVN TRUNK

* A man page has beed added (making up Matt Flax's work on
  debian, thanks).

* Translations install directory change. (EXPERIMENTAL)

* Added support for SF2 instrument names/preset enumeration.
  (EXPERIMENTAL)

* Added instrument list popup on channel strip which shows up when
  the instrument name is clicked. Allows faster switching among
  instruments of the same file.

* Adjusted configure check for libgig to detect its new libdir
  (impolitely forcing the user now to have at least libgig 3.3.0).


0.2.3  2013-12-31  A fifth of a Jubilee.

* Allow the build system to include an user specified LDFLAGS.

* More preparations for Qt5 configure build.

* Standard scalable format (SVG) and MIME type icons support for
  session files (*.lscp) is now being added.

* Preparations for Qt5 migration.

* Added include <unistd.h> to shut up gcc 4.7 build failures.

* Make(ing) -jN parallel builds now available for the masses.

* Fixed Makefile.in handling of installation directories to the
  configure script eg. --datadir, --localedir.

* Made lookup of translation files work inside a Mac OS X bundle.

* Minor Mac OS X compilation error fix.

* Debugging stacktrace now applies to all working threads.

* Made lookup of translation files more robust on Windows.

* Fixes for cross compiling and building for Windows with configure
  and make.

* libX11 is now being added explicitly to the build link phase,
  as seen necessary on some bleeding-edge distros eg. Fedora 13,
  Debian 6.

* Moving from old deprecated Qt3'ish custom event post handling
  into regular asynchronous signal/slot strategy.

* Sampler channel and instrument file requester support for
  other than GIG engine instrument files (*gig; *.dls) has
  been added, making roads for the newer SFZ and SF2 engines
  instrument files (*.sfz; *.sf2).

* General standard dialog buttons layout is now in place.
